# arc-lang

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODESTYLE.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  PARSER_ROADMAP.md  README.md  SPECIFICATION.md  TODO.md  const_test.arc  example_printf.arc  main.c  math.arc  minimal_test.arc  module_system_test.arc  module_test.arc  my_test.c  my_test.h  output.c  output.h  simple_module_test.arc  simple_test.arc  string_utils.arc  test.arc  test_c_ffi.arc  test_final_codegen.arc  test_integer_only_codegen.arc  test_mutability.arc  test_new_syntax.arc  test_simple_call.arc  test_simple_ffi.arc  test_valid.arc
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  language_proposal.yml  performance_issue.yml  question.yml
.github/workflows/: ci.yml  release.yml
arc_language_test/: clean_semantic_test.arc  comprehensive_parser_test.arc  comprehensive_semantic_test.arc  comprehensive_test.arc  semantic_test.arc  simple_semantic_test.arc  simple_test.arc  test.arc  valid_semantic_test.arc
benchmarks/: CMakeLists.txt
compiler/: CMakeLists.txt
compiler/include/arc/: cli.h  codegen.h  common.h  common.hpp  lexer.h  parser.h  semantic.h
compiler/src/: cli.c  codegen.c  codegen_ast.c  common.c  lexer.c  main.c  parser.c  semantic.c
examples/: CMakeLists.txt  filesystem_manager.arc
tests/: CMakeLists.txt
tests/common/: test_framework.c  test_framework.h
tests/compiler/: CMakeLists.txt  test_main.c
tests/compiler/fixtures/invalid/: unterminated_string.arc
tests/compiler/fixtures/valid/: complex.arc  simple.arc
tests/compiler/unit/: test_lexer.c
tools/: CMakeLists.txt
